# Raspberry-Pi-DRAM-PUF

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
.github/workflows/: build-firmware.yml  build-reader.yml  build-reader.yml.disabled  build.yml
SDCard/: cmdline.txt  config.txt  issue.txt
SDCard/System Volume Information/: IndexerVolumeGuid
SerialReader/: .gitignore  CMakeCache.txt  CMakeLists.txt  DramPufJni.java  Makefile  SerialReader  SerialReader.cbp  cmake_install.cmake  drampufjni.cpp  drampufjni.h  gpio_utils.cpp  gpio_utils.h  logger.h  main.cpp  main.h  parser.cpp  parser.h  receiver.cpp  receiver.h  runner.cpp  runner.h  runnerc.h
SerialReader/scripts/: script.sh  start.sh
covert-channel-code/: .gitignore  CC_DRAMPUF.patch  CMakeLists.txt  ReadMe.md
covert-channel-code/kernel/: Makefile  kernel.c  kernel.img  myos.elf
covert-channel-code/kernel/func/: address.h  getparam.c  test.c  uart.c
covert-channel-code/rpi-open-firmware-master/: .gitignore  BCM2708PlatformStartup.cc  Makefile  README.md  arm_monitor.c  buildall.sh  default.nix  hardware.h  log.sh  memory-map.txt  romstage.c  rpi2.dts  sdram.c  start.s  trap.c
covert-channel-code/rpi-open-firmware-master/.plan.nix/: hs-gpio.nix
covert-channel-code/rpi-open-firmware-master/arm_chainloader/: Makefile  getparam.cc  loader.cc  main.c  sdhost.hpp  start.s  trap.cc
covert-channel-code/rpi-open-firmware-master/arm_chainloader/drivers/: block_device.hpp  mbr_disk.cc  sdhost_impl.cc  uart.c  uart.c.rej
covert-channel-code/rpi-open-firmware-master/arm_chainloader/drivers/fatfs/: diskio.h  ff.c  ffconf.h  integer.h
covert-channel-code/rpi-open-firmware-master/arm_chainloader/drivers/libfdt/: fdt_ro.c
covert-channel-code/rpi-open-firmware-master/broadcom/bcm2708_chip/: arm_control.h  cpr_powman.h
covert-channel-code/rpi-open-firmware-master/common/: Makefile  crc32.c  cxx_runtime.cc  default.nix  hardware.c  hardware.h  hexdump.cc  panic.c  pl011.c  print_timestamp.c  put_dump.c  udelay.c
covert-channel-code/rpi-open-firmware-master/common/broadcom/bcm2708_chip/: sdhost.h
covert-channel-code/rpi-open-firmware-master/common/include/: hang_cpu.h  pl011.h  pll_read.h  runtime.h
covert-channel-code/rpi-open-firmware-master/docs/: arm-jtag.txt  arm-mmu.txt  boot-flow-and-secure-boot.md  clock.txt  emmc2.txt  genet.md  h264.txt  hdmi.md  hdmi.txt  hvs.md  hvs.txt  isp.txt  jtag-raw.txt  jtag.txt  linux.txt  mailbox.txt  otp.txt  packages.txt  pixelvalve.txt  pmic.txt  power-management.txt  rom.txt  rpi4-dram.txt  rpi4.txt  start4.txt  unicam.txt  v3d.txt  vcdbg.txt  vpu-irq.txt  vpu.txt  wifi.txt
covert-channel-code/rpi-open-firmware-master/drivers/: BCM2708ArmControl.cc
covert-channel-code/rpi-open-firmware-master/firmware/: Makefile  arm_monitor.c  auxx.c  interrupt.c  panic.c  romstage.c  sdram.c  sdram.h  startelf.c  trap.c  traps.S  traps.h
covert-channel-code/rpi-open-firmware-master/firmware/getpuf/: GetPuf.c  function.c
covert-channel-code/rpi-open-firmware-master/firmware/vc4_include/: cpu.h  pcb.h  vc4_types.h
covert-channel-code/rpi-open-firmware-master/getpuf/: GetPuf.c  PufAddress.h  function.c
covert-channel-code/rpi-open-firmware-master/hs-gpio/: AltModeViewer.hs  FileChooser.hs  GPIO.hs  Main.hs  MainMenu.hs  PlayWithDither.hs  PromptString.hs  Types.hs  hs-gpio.cabal
covert-channel-code/rpi-open-firmware-master/hs-gpio/cbits/: helper.c
covert-channel-code/rpi-open-firmware-master/jtag/: rpi4-to-rpi2.tcl  rpi4-to-rpi3.tcl
covert-channel-code/rpi-open-firmware-master/lib/: panic.c  udelay.c  xprintf.c  xprintf.h
covert-channel-code/rpi-open-firmware-master/lib/tlsf/: tlsf.c
covert-channel-code/rpi-open-firmware-master/nix/: sources.json
covert-channel-code/rpi-open-firmware-master/notc/: xprintf.c
covert-channel-code/rpi-open-firmware-master/notc/include/: xprintf.h
covert-channel-code/rpi-open-firmware-master/vc4_include/: cpu.h
docker/: Dockerfile
img/: Wiring.fzz
